--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -2,7 +2,7 @@
   <div class="header">
     <h2 class="title">All Courses</h2>
 
-    <button mat-mini-fab color="accent">
+    <button mat-mini-fab color="accent" routerLink="create-course">
       <mat-icon class="add-course-btn">add</mat-icon>
     </button>
   </div>
@@ -10,18 +10,28 @@
   <mat-tab-group>
     <mat-tab label="Beginners">
       <courses-card-list
+        *ngIf="beginnersCourses$ | async as courses; else noCourses"
         (courseEdited)="reloadCourses()"
-        [courses]="beginnersCourses$ | async"
+        [courses]="courses"
       >
       </courses-card-list>
     </mat-tab>
 
     <mat-tab label="Advanced">
       <courses-card-list
+        *ngIf="advancedCourses$ | async as courses; else noCourses"
         (courseEdited)="reloadCourses()"
-        [courses]="advancedCourses$ | async"
+        [courses]="courses"
       >
       </courses-card-list>
     </mat-tab>
   </mat-tab-group>
 </div>
+
+<ng-template #noCourses>
+  <div>
+    <mat-card class="course-card mat-elevation-z10">
+      <mat-card-content>No Courses Available!</mat-card-content>
+    </mat-card>
+  </div>
+</ng-template>
