--- a/src/app/edit-course-dialog/edit-course-dialog.component.html
+++ b/src/app/edit-course-dialog/edit-course-dialog.component.html
@@ -1,21 +1,37 @@
 <h2 mat-dialog-title>Edit Course</h2>
 
-<mat-dialog-content>
-  <mat-form-field>
-    <input matInput placeholder=" Title" />
-  </mat-form-field>
+<form [formGroup]="form" (ngSubmit)="onSubmit()">
+  <mat-dialog-content>
+    <mat-form-field>
+      <input matInput placeholder="Title" formControlName="description" />
+    </mat-form-field>
 
-  <mat-slide-toggle class="promo" color="primary">
-    Course in promotion?
-  </mat-slide-toggle>
+    <mat-slide-toggle class="promo" color="primary" formControlName="promo">
+      Course in promotion?
+    </mat-slide-toggle>
 
-  <mat-form-field>
-    <textarea matInput placeholder="Description"> </textarea>
-  </mat-form-field>
-</mat-dialog-content>
+    <mat-form-field>
+      <textarea
+        matInput
+        placeholder="Description"
+        formControlName="longDescription"
+      >
+      </textarea>
+    </mat-form-field>
+  </mat-dialog-content>
 
-<mat-dialog-actions>
-  <button mat-raised-button>Close</button>
+  <mat-dialog-actions>
+    <button mat-raised-button type="button" (click)="closeDialog()">
+      Close
+    </button>
 
-  <button mat-raised-button color="primary">Save</button>
-</mat-dialog-actions>
+    <button
+      mat-raised-button
+      type="submit"
+      color="primary"
+      [disabled]="!form.valid"
+    >
+      Save
+    </button>
+  </mat-dialog-actions>
+</form>
