--- a/src/app/course/course.component.html
+++ b/src/app/course/course.component.html
@@ -7,7 +7,7 @@
     <mat-spinner></mat-spinner>
   </div>
 
-  <mat-table class="lessons-table mat-elevation-z8">
+  <mat-table class="lessons-table mat-elevation-z8" [dataSource]="lessons">
     <ng-container matColumnDef="seqNo">
       <mat-header-cell *matHeaderCellDef>#</mat-header-cell>
 
@@ -35,7 +35,12 @@
     <mat-row *matRowDef="let row; columns: displayedColumns"></mat-row>
   </mat-table>
 
-  <button class="bottom-toolbar" mat-raised-button color="primary">
+  <button
+    class="bottom-toolbar"
+    mat-raised-button
+    color="primary"
+    (click)="loadMoreData()"
+  >
     Load More
   </button>
 </div>
