--- a/src/app/home/home.component.css
+++ b/src/app/home/home.component.css
@@ -7,6 +7,8 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  flex-direction: column;
+  margin-bottom: 1rem;
 }
 
 .title {
