--- a/src/app/courses-card-list/courses-card-list.component.html
+++ b/src/app/courses-card-list/courses-card-list.component.html
@@ -18,19 +18,17 @@
       VIEW COURSE
     </button>
 
-    <ng-container>
-      <ng-container>
-        <button
-          mat-button
-          class="mat-raised-button mat-accent"
-          (click)="editCourse(course)"
-        >
-          EDIT
-        </button>
-        <button mat-mini-fab color="warn" (click)="deleteCourse(course)">
-          <mat-icon>delete</mat-icon>
-        </button>
-      </ng-container>
+    <ng-container *ngIf="(user.usersRole$ | async)?.admin">
+      <button
+        mat-button
+        class="mat-raised-button mat-accent"
+        (click)="editCourse(course)"
+      >
+        EDIT
+      </button>
+      <button mat-mini-fab color="warn" (click)="deleteCourse(course)">
+        <mat-icon>delete</mat-icon>
+      </button>
     </ng-container>
   </mat-card-actions>
 </mat-card>
